css/style.css
:root {
  	--scs-red: #9C1B26;
	--scs-grey: #F1F1F2;
}

body {
	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
	color: #000;
}

.body-container {
	max-width: 1024px;
	margin: 0 auto;
	display: flex;
  	flex-flow: column wrap;
}

h1, h2 {
	font-size: 30px;
	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
	color: #9C1B26;
}

h3 {
	font-size: 25px;
	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
	color: #9C1B26;
}

/*-----------------------------------------------------------*/
/*------------------------- Header --------------------------*/
/*-----------------------------------------------------------*/

.header-container {
	width: 100%;
	height: 180px;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	background-repeat: no-repeat;
	color: #9C1B26;
}

.header-top-row {
	padding-top: 36px;
	padding-bottom: 20px;
	display: flex;
	justify-content: space-between;
	width: 100%;
}

.header-bottom-row {
	display: flex;
	justify-content: space-between;
	width: 100%;
}

.header-bottom-left {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-items: center;
	padding-bottom: 36px;
}

.header-bottom-right {
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	align-items: flex-end;
}

.logo-text {
	width: 190px;
}

.logo-icons {
	width: 165px;
}

.icon-training {
	width: 110px;
}

.welcome {
	padding: 0px 30px 12px 0px;
}

/*-----------------------------------------------------------*/
/*---------------------- Main Content -----------------------*/
/*-----------------------------------------------------------*/

.main-content-main-page {
  height: 600px;
	background-image: url("../imgs/NasalRanger.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
	flex-direction: column;
  	justify-content: flex-start;
  	align-items: center;
}

.odor-school {
	background-image: url("../imgs/NasalRanger.jpg");
}

.sensory-institute {
	background-image: url("../imgs/NasalRanger.jpg");
}

.main-content-course-detail {
  height: 760px;
	background-image: url("../imgs/NasalRanger.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
	flex-direction: column;
  	justify-content: flex-start;
  	align-items: center;
}

#login-form {
	width: 100%;
}

.login-form-show {
	width: 100%;
	display: flex;
	justify-content: flex-end;
}

.login-wrapper {
	width: 620px;
	height: 120px;
	color: #9C1B26;
	background-color: #F1F1F2;
	display: flex;
	justify-content: space-around;
	align-items: center;
}

.input-login {
	width: 205px;
	height: 45px;
	border-radius: none;
	border: 2px solid #9C1B26;
}

input::placeholder {
	color: #9C1B26 !important;
}

/*-----------------------------------------------------------*/
/*--------------------- Main Card ---------------------------*/
/*-----------------------------------------------------------*/

.card-main-page {
  	width: 620px;
	height: 440px;
  	border-radius: 0px;
  	border: none;
	margin-top: 30px;
}

.card-course-detail {
  	width: 620px;
	height: 700px;
  	border-radius: 0px;
  	border: none;
	margin-top: 30px;
}

.card-course-description {
  	width: 360px;
	height: 200px;
  	border-radius: 0px;
  	border: none;
	margin-top: 30px;
	border: 1px solid #9C1B26;
}

.expandable-button-collapse {
	height: 225px;
	width: 190px;
	border: 1px solid #9C1B26;
	border-top: 0;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
}

.course-detail-text {
	margin: 10px;
	color: #9C1B26;
	font-size: 14px;
}

.card-course-contents {
	justify-content: flex-start;
  	width: 360px;
	height: 275px;
  	border-radius: 0px;
  	border: none;
	margin-top: 30px;
	border: 1px solid #9C1B26;
}

.card-header {
  	height: 45px;
  	width: 100%;
  	display: flex;
  	background-color: #9C1B26;
  	border-radius: 0px;
  	color: #f9f9f9;
	font-size: 14px;
}

.card-header-large {
	justify-content: space-around;
}

.card-header-small {
	justify-content: flex-start;
}

.card-header:first-child {
  	border-radius: 0px;
}

.card-body-main-page {
  	display: flex;
  	justify-content: space-around;
}

.card-body-course-detail {
  	display: flex;
	flex-direction: column;
  	justify-content: space-around;
	font-size: 12px;
}

.card-body-course-contents {
	width: 100%;
  	display: flex;
	align-items: flex-start;
	padding-left: 0;
}

.card-column {
  	display: flex;
  	flex-direction: column;
  	align-items: center;
}

.card-column-right {
	display: flex;
	flex-direction: column;
	justify-content: flex-start;
	align-items: center;
	padding-top: 30px;
}

.card-columns-wrapper {
	width: 100%;
	display: flex;
	flex-direction: row;
	justify-content: space-around;
}

.card-subtitle {
	display: flex;
	justify-content: space-around;
	align-items: flex-start;
}

.card-subtitle-course-detail {
	width: 100%;
	display: flex;
	justify-content: flex-start;
}

.card-subtitle h3 {
  	padding-bottom: 20px;
}

.card-trademark {
	font-size: 14px;
	color: #9C1B26;
}

.button-group {
	display: flex;
	flex-direction: column;
	justify-content: flex-start;
}

.expandable-text-wrapper {
	width: 256px;
	height: 80px;
	display: flex;
	align-items: center;
	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
	color: #f9f9f9;
	background-image: url("../imgs/button_hover_01.png");
	background-size: 256px;
	padding: 10px;
}

.collapsed-button {
	display: none;
}

.logo-nasal-ranger {
	width: 110px;
	margin-right: 30px;
}
/*-----------------------------------------------------------*/
/*------------------------ Buttons --------------------------*/
/*-----------------------------------------------------------*/

.btn:hover {
	cursor: pointer;
}

.btn-browse {
	width: 190px;
	height: 45px;
}

.btn-login {
	width: 180px;
	height: 45px;
	font-size: 14px;
}

.btn-course {
	width: 190px;
	height: 45px;
	padding: 0;
	display: flex;
	margin-top: 15px;
}

.btn-course-top {
	margin-top: 0;
}

.btn-course-text {
	padding: 10px 0 0 10px;
}

.btn-icon-wrapper {
	height: 44px;
	width: 44px;
	background-color: #9C1B26;
}

.btn-login-dropdown {
	width: 96px;
	height: 45px;
	font-size: 14px;
}

.btn-logout {
	width: 180px;
	height: 45px;
	font-size: 14px;
}

.btn-student-center {
	width: 180px;
	height: 45px;
	font-size: 14px;
	margin-right: 10px;
}

.btn-card {
  	width: 256px;
  	height: 45px;
  	margin-top: 10px;
	text-align: left;
	font-size: 14px;
}

.btn-red {
  	border-radius: 0px;
  	background-color: #9C1B26;
  	color: #f9f9f9;
}

.btn-white {
  	border-radius: 0px;
	border: 1px solid #9C1B26;
	color: #9C1B26;
}

.dropdown-toggle {
	background-color: #F1F1F2;
	color: #9C1B26;
}

.btn-course-detail {
	width: 170px;
	margin: 10px;
}

/*-----------------------------------------------------------*/
/*-------------------------- Footer -------------------------*/
/*-----------------------------------------------------------*/

footer {
  	height: 180px;
	background-color: #F1F1F2;
}

.footer-container {
	width: 100%;
	height: 100%;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: space-around;
}

.logo-text-footer {
	width: 200px;
}

.logo-icons-footer {
	width: 200px;
	padding-bottom: 8px;
}

/*-----------------------------------------------------------*/
/*------------------- Bootstrap Overrides -------------------*/
/*-----------------------------------------------------------*/

.form-control {
	border-radius: 0px;
}

img {
  	width: 100%;
  	height: auto;
}

.form-control:focus {
	box-shadow: none;
}

